--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,8 +1,4 @@
 security:
-    # a new authentication system is available since Symfony 5.1 to make
-    # Symfony security more extensible and easier to understand
-    # https://symfony.com/doc/current/security.html
-    enable_authenticator_manager: true
 
     password_hashers:
         # Our user class and the algorithm we'll use to encode passwords
@@ -52,7 +48,7 @@ security:
 
                 # Secure the logout against CSRF
                 csrf_parameter: logout
-                csrf_token_generator: security.csrf.token_manager
+                csrf_token_manager: security.csrf.token_manager
 
             # needed because in tests we redefine the 'main' firewall to use
             # HTTP Basic instead of the login form, so this firewall has
