--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
     "devDependencies": {
-        "@fortawesome/fontawesome-free": "^5.8.1",
-        "@symfony/stimulus-bridge": "^2.0.0",
-        "@symfony/webpack-encore": "^1.0.0",
-        "bloodhound-js": "^1.2.3",
-        "bootstrap-sass": "^3.3.7",
-        "bootstrap-tagsinput": "^0.7.1",
-        "bootswatch": "^3.3.7",
+        "@babel/core": "^7.19.1",
+        "@babel/preset-env": "^7.19.1",
+        "@fortawesome/fontawesome-free": "^6.1",
+        "@hotwired/stimulus": "^3.1.0",
+        "@popperjs/core": "^2.11.4",
+        "@symfony/stimulus-bridge": "^3.0.0",
+        "@symfony/webpack-encore": "^4.0.0",
+        "Hinclude": "^1.2.0",
+        "chart.js": "^3.4.1",
         "core-js": "^3.0.0",
-        "eonasdan-bootstrap-datetimepicker": "^4.17.47",
-        "highlight.js": "^11.5.1",
-        "imports-loader": "^0.8.0",
-        "jquery": "^3.5.1",
-        "lato-font": "^3.0.0",
-        "node-sass": "^7.0",
-        "sass-loader": "^12.3",
-        "typeahead.js": "^0.11.1",
+        "node-sass": "^7.0.1",
         "regenerator-runtime": "^0.13.2",
-        "stimulus": "^2.0.0",
-        "webpack-notifier": "^1.6.0"
+        "sass": "^1.38.2",
+        "sass-loader": "^13.0.0",
+        "simple-datatables": "^3.2.0",
+        "stimulus": "^3.2.1",
+        "sweetalert2": "^11.4.7",
+        "ts-loader": "^9.3.0",
+        "typescript": "^4.7.3",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-notifier": "^1.15.0"
     },
     "license": "MIT",
     "private": true,
@@ -27,5 +30,19 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "bloodhound-js": "^1.2.3",
+        "bootstrap": "^5.2.3",
+        "bootstrap-sass": "^3.4.3",
+        "bootstrap-tagsinput": "^0.7.1",
+        "bootswatch": "^5.2.3",
+        "eonasdan-bootstrap-datetimepicker": "^4.17.49",
+        "flatly": "^0.1.19",
+        "highlight.js": "^11.7.0",
+        "imports-loader": "^4.0.1",
+        "jquery": "^3.6.4",
+        "lato-font": "^3.0.0",
+        "typeahead.js": "^0.11.1"
     }
 }
